tests/fail/no-unimported-text-local.tsx
const Text = () => <span />;

const view = <Text />;
